# chess-board

./: README.md  chess_board.ipynb  pyproject.toml
.ipynb_checkpoints/: chess_board-checkpoint.ipynb
tests/.ipynb_checkpoints/: test_chess_board-checkpoint.py
