[tool.poetry]
name = "chess-board"
version = "0.1.0"
description = ""
authors = ["HishamKhalil1990 <hisham.khalil1990@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
jupyterlab = "^3.0.16"
poetry = "^1.1.6"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
